--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   webview_flutter: ^4.9.0
   webview_flutter_wkwebview: ^3.15.0
   url_launcher: ^6.3.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
